halverwege de dag

--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -250,7 +250,55 @@ I discuss two extra light heads: the animate accusative and the animate dative. 
 
 I decompose the extra light heads in two morphemes: the \tit{o} and the final suffix (\tit{go} and \tit{mu}). For each morpheme, I discuss which features they spell out, and I give their lexical entries. In the end, I show how the extra light heads are constructed.
 
+Even though I start with the extra light heads, I start with the relative pronouns. consider the table.
+
+\begin{table}[htbp]
+  \center
+  \caption{Polish (in)animate relative pronouns \pgcitep{swan2002}{160}}
+  \begin{tabular}[b]{ccc}
+    \toprule
+              & \tsc{an}  & \tsc{inam} \\
+    \cmidrule{2-3}
+    \tsc{nom} & kto       & c-o        \\
+    \tsc{acc} & k-o-go    & c-o        \\
+    \tsc{gen} & k-o-go    & cz-e-go    \\
+    \tsc{dat} & k-o-mu    & cz-e-mu    \\
+    \bottomrule
+  \end{tabular}
+  \label{tbl:pol-rels}
+\end{table}
+
+The inanimates start with a cz. The cz is not a primary vowel but a derived one. it appears when it is combines with a xx.
+
+give example of that
+
+The \tit{e} is also a product of the \tit{j} coming together with the xx.
+
+give example of that
+
+So, actually, what we are looking at is this:
+
+\begin{table}[htbp]
+  \center
+  \caption{Polish (in)animate relative pronouns \pgcitep{swan2002}{160}}
+  \begin{tabular}[b]{ccc}
+    \toprule
+              & \tsc{an}  & \tsc{inam} \\
+    \cmidrule{2-3}
+    \tsc{nom} & kto       & k-j-o        \\
+    \tsc{acc} & k-o-go    & k-j-o        \\
+    \tsc{gen} & k-o-go    & k-j-o-go    \\
+    \tsc{dat} & k-o-mu    & k-j-o-mu    \\
+    \bottomrule
+  \end{tabular}
+  \label{tbl:pol-rels}
+\end{table}
+
+Now, analyze the personal pronouns like this too:
+
 I start from \tit{je}-pronouns.
+
+this je differs in one feature from the extra light head: namely the \tsc{c}. I assume that the strong pronoun spells out \tit{j}. and the rest of the structure is light head. now the question is: which portion does \tit{o} spell out and which portion does the suffix?
 
 
 I start with the morphemes \tit{go} and \tit{mu}. Consider the masculine and neuter personal pronouns in Table \ref{tbl:pol-prons}.\footnote{
