rp modern german done

--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -265,7 +265,7 @@ Even though I start with the extra light heads, I start with the relative pronou
     \tsc{dat} & k-o-mu    & cz-e-mu    \\
     \bottomrule
   \end{tabular}
-  \label{tbl:pol-rels}
+  \label{tbl:pol-rels-1}
 \end{table}
 
 The inanimates start with a cz. The cz is not a primary vowel but a derived one. it appears when it is combines with a xx.
